<?xml version="1.0" encoding="utf-8"?>  
<resources>
	<string name="tab1Selected"><u>Cerca</u></string>
	<string name="tab2Selected"><u>Corse</u></string>
	<string name="tab3Selected"><u>Tariffe</u></string>
	<string name="tab4Selected"><u>Lingua</u></string>
	<string name="app_name">Buonotourist-Unisa</string>
	<string name="tab1">Cerca</string>
	<string name="tab2">Corse</string>
	<string name="tab3">Tariffe</string>
	<string name="tab4">Lingua</string>
	<string name="cerca">Cerca</string>
	<string name="annulla">Annulla</string>
	<string name="da">Da :</string>
	<string name="a">A :</string>
	<string name="orario">Orario :</string>	
	<string name="costoA">Costo abbonamento:</string>
	<string name="costoB">Costo Biglietto:</string>	
	<string name="partenza">Partenza</string>
	<string name="destinazione">Destinazione</string>
	<string name="scegliLingua">Scegliere la lingua: </string>
	<string name="italianoLingua">Italiano</string>
	<string name="ingleseLingua">Inglese</string>
	
</resources>