<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"  
android:id="@+id/scroll" 
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:background="@color/body">
<LinearLayout
    	android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:gravity="center"
    	android:orientation="vertical"
    	android:background="@color/body">
    <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:orientation="horizontal"
          android:background="@color/navBar" >
      <Button    
      	  android:textColor="@color/button_navbar"
          style="@style/bottoniNavbar"
          android:id="@+id/idBottoniNavbar_Cerca"
          android:text="@string/tab1" />
      <Button
          android:textColor="@color/button_navbar"
          style="@style/bottoniNavbar"
          android:id="@+id/idBottoniNavbar_Corse"
          android:text="@string/tab2" />
      <Button
          android:textColor="@color/focusTab"
          style="@style/bottoniNavbar"
          android:text="@string/tab3"
          android:id="@+id/idBottoniNavbar_Tariffe"
           />
      <Button
		  android:textColor="@color/button_navbar"
          style="@style/bottoniNavbar"
          android:text="@string/tab4" 
          android:id="@+id/idBottoniNavbar_Lingua"
          />
	
    </LinearLayout>
    
    
    
    <TableLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:background="@color/body"
           android:gravity="center">
        <TableRow
     			android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp" >
        	    <TextView
        	    	android:gravity="center"
        	    	android:textColor="#000000"
            		android:layout_width="match_parent"
            		android:layout_height="match_parent"
                	android:text="@string/da" />
         	   <Button
                	android:id="@+id/idBottoni_TariffaDa" 
                	android:layout_width="match_parent"
                	android:layout_height="match_parent"
                	android:minWidth="280dp"
                	android:maxWidth="280dp"
                />
        </TableRow>
        <TableRow
     			android:orientation="horizontal"
            	android:layout_width="match_parent"
            	android:layout_height="match_parent"
            	android:layout_margin="15dp" >
       			<TextView
       				android:gravity="center"
       				android:textColor="#000000"
            		android:layout_width="match_parent"
            		android:layout_height="match_parent"
            		android:text="@string/a" />
         		<Button
            		android:id="@+id/idBottoni_TariffaA"
            		android:layout_width="match_parent"
            		android:layout_height="match_parent"
            		android:minWidth="280dp"
                	android:maxWidth="280dp" />
         </TableRow>
         
     </TableLayout>
     <LinearLayout
     			android:orientation="horizontal"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content" 
        		android:background="@color/body">
            	<Button
            		android:textColor="@color/button_confirm"
          			style="@style/bottoniConfirm"
            		android:text="@string/cerca" />	
        		<Button
        	    	android:textColor="@color/button_confirm"
          			style="@style/bottoniConfirm"
            		android:text="@string/annulla" />
      </LinearLayout>    
       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="150dp"
           android:background="@color/body"
           android:gravity="bottom"
           android:orientation="vertical" >
            <TextView
                android:layout_marginTop="30dp"
            	android:layout_width="201dp"
            	android:layout_height="40dp"
            	android:text="@string/costoA"
            	android:textColor="#000000" />
        	<TextView
        	    android:layout_marginTop="30dp"
        	    android:layout_width="178dp"
        	    android:layout_height="match_parent"
        	    android:text="@string/costoB"
        	    android:textColor="#000000" />
      </LinearLayout>
</LinearLayout>
</ScrollView> 