<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
				android:orientation="vertical"
			    android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/body" >
<LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:orientation="horizontal"
          android:background="@color/navBar" >
      <Button     
          android:textColor="@color/button_navbar"
          style="@style/bottoniNavbar"
          android:id="@+id/idBottoniNavbar_Cerca"
          android:text="@string/tab1" />
      <Button
          android:textColor="@color/button_navbar"
          style="@style/bottoniNavbar"
          android:id="@+id/idBottoniNavbar_Corse"
          android:text="@string/tab2" />
      <Button
		  android:textColor="@color/button_navbar"
          style="@style/bottoniNavbar"
          android:text="@string/tab3"
          android:id="@+id/idBottoniNavbar_Tariffe"
           />
      <Button
          android:textColor="@color/button_navbar_selected"
          style="@style/bottoniNavbar"
          android:text="@string/tab4Selected" 
          android:id="@+id/idBottoniNavbar_Lingua"
          />
	
</LinearLayout>
<ScrollView   
android:id="@+id/scroll" 
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:background="@color/body">
<LinearLayout
    	android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:gravity="center"
    	android:orientation="vertical"
    	android:background="@color/body">
    
    
    
     <LinearLayout
     			android:orientation="horizontal"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content" 
        		android:background="@color/body">
     <TextView
        	    android:gravity="center"
        	    android:textColor="#000000"
            	android:layout_width="match_parent"
            	android:layout_height="match_parent"
           android:text="@string/scegliLingua"
                />   	
      </LinearLayout>
    
    
    
    
    <TableLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:background="@color/body"
           android:gravity="center">
    <TableRow
     	   android:orientation="horizontal"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_margin="15dp" >
    <RadioGroup
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           android:orientation="vertical"
           >   
     <RadioButton
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/italianoLingua"
           android:textColor="#000000"
           />
      <RadioButton
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/ingleseLingua"
           android:textColor="#000000"
           
           />
      </RadioGroup>
      </TableRow>
        
         
     </TableLayout>
     <LinearLayout
           android:orientation="horizontal"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content" 
           android:background="@color/body">
     <Button
            android:textColor="@color/button_confirm"
          	style="@style/bottoniConfirm"
            android:text="Conferma"
            android:id="@+id/idBottoniFormLingua_Conferma"
             />	
        		
      
      </LinearLayout>
</LinearLayout>
</ScrollView> 
</LinearLayout>
