<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical"
			   android:layout_width="fill_parent"
               android:layout_height="fill_parent"
               android:background="@color/body"  >
<LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:id="@+id/idNavbar_Top"
          android:orientation="horizontal"
          android:background="@drawable/drawable_border_navbar_sfondo"
          android:padding="2dp"    
          >
      <Button    
      	  android:textColor="@color/col_button_navbar_text"
          style="@style/bottoniNavbar"
          android:id="@+id/idBottoniNavbar_Cerca"
          android:text="@string/tab1" />
      <Button
          android:textColor="@color/col_button_navbar_text"
          style="@style/bottoniNavbar"
          android:id="@+id/idBottoniNavbar_Corse"
          android:text="@string/tab2" />
      <Button
          android:textColor="@color/col_button_navbar_selected_text"
          style="@style/bottoniNavbar"
          android:text="@string/tab3Selected"
          android:id="@+id/idBottoniNavbar_Tariffe"
           />
    </LinearLayout>
<ScrollView  
android:id="@+id/scroll" 
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:fillViewport="true"
android:layout_above="@+id/idLayout_BannerAdmob"
android:layout_below="@+id/idNavbar_Top">
<LinearLayout
    	android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:gravity="top"
    	android:orientation="vertical"
    	android:background="@color/body">
    <TableLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:background="@color/body"
           android:gravity="center">
        <TableRow
     			android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp" 
                android:gravity="center">
        	    <TextView
        	    	android:gravity="center"
        	    	android:textColor="#000000"
            		android:layout_width="match_parent"
            		android:layout_height="match_parent"
                	android:text="@string/da" />
         	   <Button
         	        android:textStyle="italic"
         		    android:textSize="15dp"
         	   		android:textColor="@color/col_button_confirm_text"
         	   		android:text="@string/partenza" 
         	        android:background="@drawable/drawable_bottoni_select_body_sfondo"
                	android:id="@+id/idBottoni_TariffaDa" 
                	android:layout_width="match_parent"
                	android:layout_height="match_parent"
                	android:minWidth="180dp"
                	android:maxWidth="180dp"
                />
        </TableRow>
        <TableRow
     			android:orientation="horizontal"
            	android:layout_width="match_parent"
            	android:layout_height="match_parent"
            	android:layout_margin="15dp" 
            	android:gravity="center">
       			<TextView
       				android:gravity="center"
       				android:textColor="#000000"
            		android:layout_width="match_parent"
            		android:layout_height="match_parent"
            		android:text="@string/a" />
         		<Button
         		    android:textStyle="italic"
         		    android:textSize="15dp"
         			android:textColor="@color/col_button_confirm_text"
         	   		android:text="@string/destinazione" 
         		    android:background="@drawable/drawable_bottoni_select_body_sfondo"
            		android:id="@+id/idBottoni_TariffaA"
            		android:layout_width="match_parent"
            		android:layout_height="match_parent"
            		android:minWidth="180dp"
                	android:maxWidth="180dp" />
         </TableRow>
         
     </TableLayout>
     <LinearLayout
     			android:orientation="horizontal"
        		android:layout_width="match_parent"
        		android:layout_height="wrap_content" 
        		android:background="@color/body"
        		android:gravity="center">
            	<Button
            	    android:id="@+id/idBottoniFormTariffe_Cerca"
            		android:textColor="@color/col_button_confirm_text"
            		android:background="@drawable/drawable_bottoni_body_sfondo"
          			style="@style/bottoniConfirm"
            		android:text="@string/cerca" />	
        		<Button
        		    android:id="@+id/idBottoniFormTariffe_Annulla"
        	    	android:textColor="@color/col_button_confirm_text"
        	    	android:background="@drawable/drawable_bottoni_body_sfondo"
          			style="@style/bottoniConfirm"
            		android:text="@string/annulla" />
      </LinearLayout> 
      <TableLayout
      	   android:layout_marginTop="20dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:background="@color/body"
           android:gravity="center">
        <TableRow
     			android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp" 
                android:gravity="center">
                 <TextView
                	android:gravity="left"
            		android:id="@+id/idTextViewFormTariffe_Abbonamento"
            		android:layout_width="match_parent"
            		android:layout_height="wrap_content"
            		android:text="@string/costoA"
            		android:paddingLeft="15dp"
            		android:textColor="#AABDC1" />      
         </TableRow>
         <TableRow
         		
     			android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp" 
                android:gravity="center">
                <TextView
        			android:gravity="left"
        	    	android:id="@+id/idTextViewFormTariffe_Biglietto"
        	    	android:layout_width="match_parent"
        	    	android:layout_height="wrap_content"
        	    	android:text="@string/costoB"
        	    	android:textColor="#AABDC1" 
        	    	android:paddingLeft="15dp"/>
         </TableRow> 
        </TableLayout>  
</LinearLayout>
</ScrollView>
<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
  		android:layout_alignParentBottom="true"
    	android:orientation="horizontal" 
    	android:gravity="center"
        android:background="@drawable/drawable_banneradmob"  	
    	android:id="@+id/idLayout_BannerAdmob">
	</LinearLayout> 
</RelativeLayout>