<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical"
			   android:layout_width="fill_parent"
               android:layout_height="fill_parent"
               android:background="@color/body"  >
<LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:orientation="horizontal"
          android:id="@+id/idNavbar_Top"
          android:background="@drawable/drawable_border_navbar_sfondo"
          android:padding="2dp"
          >
      <Button     
          android:textColor="@color/col_button_navbar_selected_text"
          android:textStyle="bold"
          style="@style/bottoniNavbar"
          android:id="@+id/idBottoniNavbar_Cerca"
          android:text="@string/tab1Selected" />
      <Button
          android:textColor="@color/col_button_navbar_text"
          style="@style/bottoniNavbar"
          android:id="@+id/idBottoniNavbar_Corse"
          android:text="@string/tab2" />
      <Button
		  android:textColor="@color/col_button_navbar_text"
          style="@style/bottoniNavbar"
          android:text="@string/tab3"
          android:id="@+id/idBottoniNavbar_Tariffe"
           />
      <ImageButton
       	  android:layout_width="wrap_content"
          android:layout_height="match_parent"
      	  android:id="@+id/idBottone_navbar_geoLocalizeButton"
          android:src="@drawable/icon_map"
          style="style/bottoneReverse"
      />
</LinearLayout>
<ScrollView  
	android:id="@+id/scroll" 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:layout_above="@+id/idLayout_BannerAdmob"
    android:layout_below="@+id/idNavbar_Top">
<LinearLayout
    	android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:gravity="top"
    	android:orientation="vertical" 
    	android:background="@color/body">
    
    <TableLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:background="@color/body"
           android:gravity="center">
        <TableRow
     			android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:gravity="center" >
        	    <TextView
        	    	android:gravity="center"
        	    	android:textColor="#000000"
            		android:layout_width="match_parent"
            		android:layout_height="match_parent"
                	android:text="@string/da" />
         	   <Button
         		    android:textStyle="italic"
         		    android:textSize="15dp"
         	        android:textColor="@color/col_button_confirm_text"
         	   		android:text="@string/partenza" 
         	   		android:background="@drawable/drawable_bottoni_select_body_sfondo"
                	android:id="@+id/idBottoni_Provenienza" 
            		android:layout_width="match_parent"
            		android:layout_height="match_parent"
                	android:minWidth="180dp"
                	android:maxWidth="180dp"
                />
        </TableRow>
        <TableRow
     			android:orientation="horizontal"
          		android:layout_width="match_parent"
           		android:layout_height="wrap_content"
            	android:layout_margin="15dp"
                android:gravity="center" >
                <TextView
       				android:gravity="center"
       				android:textColor="#000000"
            		android:layout_width="match_parent"
            		android:layout_height="match_parent"
            		android:text="@string/a" />
         		<Button
         		    android:textStyle="italic"
         		    android:textSize="15dp"
         		    android:textColor="@color/col_button_confirm_text"
         		    android:text="@string/destinazione"
         		    android:background="@drawable/drawable_bottoni_select_body_sfondo"
            		android:id="@+id/idBottoni_Destinazione"
            		android:layout_width="match_parent"
            		android:layout_height="match_parent"
            		android:minWidth="180dp"
                	android:maxWidth="180dp" />
         </TableRow>
         <TableRow
     			android:orientation="horizontal"
           		android:layout_width="match_parent"
           		android:layout_height="wrap_content"
                android:gravity="center" 
            	android:color="#000000"
            	 >
         		<TextView
         			android:gravity="center"
         			android:textColor="#000000"
            		android:layout_width="match_parent"
            		android:layout_height="match_parent"
                	android:text="@string/orarioL" />
        		<Button
         		    android:textStyle="italic"
         		    android:textSize="15dp"
         	        android:textColor="@color/col_button_confirm_text"
         	   		android:text="@string/orario" 
         	   		android:background="@drawable/drawable_bottoni_select_body_sfondo"
                	android:id="@+id/idBottoni_Orario" 
            		android:layout_width="match_parent"
            		android:layout_height="match_parent"
                	android:minWidth="180dp"
                	android:maxWidth="180dp"
                />
         </TableRow>
     </TableLayout>
     <LinearLayout
     			android:layout_marginTop="20dp"
     			android:orientation="horizontal"
        		android:layout_width="match_parent"
        		android:layout_height="wrap_content" 
        		android:background="@color/body"
        		android:gravity="center">
            	<Button
            		android:textColor="@color/col_button_confirm_text"
            		android:background="@drawable/drawable_bottoni_body_sfondo"
          			style="@style/bottoniConfirm"
            		android:text="@string/cerca" 
            		android:id="@+id/idBottoniFormCerca_Cerca"
            		/>	
        		<Button
        	    	android:textColor="@color/col_button_confirm_text"
        	    	android:background="@drawable/drawable_bottoni_body_sfondo"
          			style="@style/bottoniConfirm"
            		android:text="@string/annulla" 
            		android:id="@+id/idBottoniFormCerca_Annulla"
            		/>
      </LinearLayout>
      <LinearLayout
     			android:layout_marginTop="10dp"
     			android:orientation="vertical"
        		android:layout_width="match_parent"
        		android:layout_height="wrap_content" 
        		android:background="@color/body"
        		android:gravity="center">
      			<TextView
         			android:gravity="center"
          			android:textColor="@color/col_button_navbar_text"
            		android:layout_width="match_parent"
            		android:layout_height="wrap_content"
            		android:id="@+id/idTextViewCerca_Email"
                	android:text="@string/contactMail" 
                	android:layout_marginBottom="25dp"/>
                <TextView
         			android:gravity="center"
          			android:textColor="@color/col_button_navbar_text"
            		android:layout_width="match_parent"
            		android:layout_height="wrap_content"
            		android:id="@+id/idTextViewCerca_ChiamaBuonotourist"
                	android:text="@string/contactBuonotourist" />
      </LinearLayout>
      
</LinearLayout>
</ScrollView> 
	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
  		android:layout_alignParentBottom="true"
    	android:orientation="horizontal" 
    	android:gravity="center"
        android:background="@drawable/drawable_banneradmob"  	
    	android:id="@+id/idLayout_BannerAdmob">
	</LinearLayout>
</RelativeLayout>