<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical"
			   android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:background="@color/body"  >

<LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:orientation="horizontal"
          android:background="@drawable/drawable_border_navbar_sfondo"
          android:padding="2dp"
          >
      <Button     
          android:textColor="@color/col_button_navbar_selected_text"
          android:textStyle="bold"
          style="@style/bottoniNavbar"
          android:id="@+id/idBottoniNavbar_Cerca"
          android:text="@string/tab1Selected" />
      <Button
          android:textColor="@color/col_button_navbar_text"
          style="@style/bottoniNavbar"
          android:id="@+id/idBottoniNavbar_Corse"
          android:text="@string/tab2" />
      <Button
		  android:textColor="@color/col_button_navbar_text"
          style="@style/bottoniNavbar"
          android:text="@string/tab3"
          android:id="@+id/idBottoniNavbar_Tariffe"
           />
</LinearLayout>
<LinearLayout
    	android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:gravity="top"
    	android:orientation="vertical"
    	android:background="@color/body">
    	<TextView
         			android:gravity="center"
         			android:textColor="#000000"
            		android:layout_width="match_parent"
            		android:layout_height="wrap_content"
                	android:text="La fermata più vicina:" 
                	android:id="@+id/idTextViewMappa_fermataVicina"
                	android:textStyle="bold"
                	android:layout_marginBottom="10dp"  />
    	<fragment xmlns:android="http://schemas.android.com/apk/res/android"
    		android:id="@+id/map"
    		android:name="com.google.android.gms.maps.SupportMapFragment"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content" />
    
    
     
</LinearLayout>
</LinearLayout>


