<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
				android:orientation="vertical"
			    android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/body" >
	<LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:orientation="horizontal"
          android:background="@drawable/border_navbar_sfondo"
          android:padding="2dp" >
      <Button     
          android:textColor="@color/button_navbar_text"
          style="@style/bottoniNavbar"
          android:id="@+id/idBottoniNavbar_Cerca"
          android:text="@string/tab1" />
      <Button
          android:textColor="@color/button_navbar_selected_text"
          style="@style/bottoniNavbar"
          android:id="@+id/idBottoniNavbar_Corse"
          android:text="@string/tab2Selected" />
      <Button
		  android:textColor="@color/button_navbar_text"
          style="@style/bottoniNavbar"
          android:text="@string/tab3"
          android:id="@+id/idBottoniNavbar_Tariffe"
           />
      <ImageButton
       	  android:layout_width="wrap_content"
          android:layout_height="match_parent"
      	  android:id="@+id/idBottone_navbar_imageButton"
          android:src="@drawable/reverse_icon"
          style="style/bottoneReverse"
      />
	
	</LinearLayout>
	<ScrollView   
	android:id="@+id/scroll" 
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:fillViewport="true">
	<LinearLayout
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:gravity="top"
    	android:orientation="vertical"
    	android:background="@color/body">
    				<TextView
         			android:gravity="center"
         			android:textColor="#000000"
            		android:layout_width="match_parent"
            		android:layout_height="wrap_content"
                	android:text="@string/andata" 
                	android:id="@+id/idTextViewCorse_AndataRitorno"
                	android:textStyle="bold"
                	android:layout_marginBottom="10dp"  />
                	<TableLayout
           				android:layout_width="match_parent"
           				android:layout_height="wrap_content"
          		 		android:background="@color/body"
           				android:gravity="top"
           				android:id="@+id/idTableLayoutCorse_AndataRitorno">
           				
           				
           				
           			</TableLayout>
	</LinearLayout>
	</ScrollView> 
</LinearLayout>
