<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical"
			   android:layout_width="fill_parent"
               android:layout_height="fill_parent"
               android:background="@color/body"  >
	<LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:id="@+id/idNavbar_Top"
          android:orientation="horizontal"
          android:background="@drawable/drawable_border_navbar_sfondo"
          android:padding="2dp" >
      <Button     
          android:textColor="@color/col_button_navbar_text"
          style="@style/bottoniNavbar"
          android:id="@+id/idBottoniNavbar_Cerca"
          android:text="@string/tab1" />
      <Button
          android:textColor="@color/col_button_navbar_selected_text"
          style="@style/bottoniNavbar"
          android:id="@+id/idBottoniNavbar_Corse"
          android:text="@string/tab2Selected" />
      <Button
		  android:textColor="@color/col_button_navbar_text"
          style="@style/bottoniNavbar"
          android:text="@string/tab3"
          android:id="@+id/idBottoniNavbar_Tariffe"
           />
      
	
	</LinearLayout>
	<ScrollView   
	android:id="@+id/scroll" 
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:fillViewport="true"
	android:layout_above="@+id/idLayout_BannerAdmob"
    android:layout_below="@+id/idNavbar_Top">
	<LinearLayout
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:gravity="top"
    	android:orientation="vertical"
    	android:background="@color/body">
    				<TextView
         			android:gravity="center"
         			android:textColor="#000000"
            		android:layout_width="match_parent"
            		android:layout_height="wrap_content"
                	android:text="@string/risultatiRicerca" 
                	android:id="@+id/idTextViewCorse_AndataRitorno"
                	android:textStyle="bold"
                	android:layout_marginBottom="10dp"  />
                	<TableLayout
           				android:layout_width="match_parent"
           				android:layout_height="wrap_content"
          		 		android:background="@color/body"
           				android:gravity="top"
           				android:id="@+id/idTableLayoutCorse_AndataRitorno">		
           			</TableLayout>
	</LinearLayout>
	</ScrollView> 
		<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
  		android:layout_alignParentBottom="true"
    	android:orientation="horizontal" 
    	android:gravity="center"
        android:background="@drawable/drawable_banneradmob"  	
    	android:id="@+id/idLayout_BannerAdmob">
	</LinearLayout>
</RelativeLayout>
